Modificação de parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat magni corporis quis expedita nam iste quibusdam possimus cupiditate facilis, facere exercitationem accusamus praesentium minima. Nulla laboriosam exercitationem quidem. Quis, est.
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, incidunt. Voluptatibus ipsum nihil modi recusandae ratione, corrupti obcaecati repellat distinctio harum cum possimus et corporis voluptate, facere fugiat, ut minima.</p>
 </body>
 </html>
